# real-time-ml-crypto

./: .gitignore  Makefile  README.md  docker-compose-redpanda.yml  quix.yaml
.github/workflows/: deploy_to_prod.yml  test.yml  test_and_deploy_to_dev.yml
docker-compose/: Makefile  backfill_pipeline.yml  elastic_search_and_kibana.yml  feature_pipeline.yml
services/price_predictor/: .dockerignore  Dockerfile  Makefile  app.yaml  pyproject.toml
services/price_predictor/src/: api.py  config.py  feature_engineering.py  hopsworks_api.py  logger.py  model_registry.py  ohlc_data_reader.py  ohlcv_data_reader.py  preprocessing.py  price_predictor.py  training.py  utils.py
services/price_predictor/src/models/: current_price_baseline.py  xgboost_model.py
services/price_predictor/tests/: test_utils.py
services/topic_to_feature_store/: Dockerfile  Makefile  app.yaml  historical.dev.env  historical.prod.env  live.dev.env  live.prod.env  pyproject.toml
services/topic_to_feature_store/src/: config.py  hopsworks_api.py  logger.py  main.py  utils.py
services/trade_producer/: Dockerfile  Makefile  app.yaml  historical.dev.env  historical.prod.env  live.dev.env  live.prod.env  prod.env  pyproject.toml
services/trade_producer/src/: config.py  kraken_websocket_api.py  logger.py  main.py
services/trade_producer/src/trade_data_source/: __init__.py  base.py  kraken_rest_api.py  kraken_websocket_api.py  trade.py
services/trade_to_ohlcv/: Makefile  app.yaml  historical.dev.env  historical.prod.env  live.dev.env  live.prod.env  pyproject.toml
services/trade_to_ohlcv/src/: config.py  main.py
services/trade_to_ohlcv/tests/: test_update_ohlcv_candle.py
