[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Porter Bagley <porter7678@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic-settings = "^2.5.2"
hopsworks = "^3.7.0"
loguru = "^0.7.2"
pandas = "<2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
 